deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-landing-page-dev
spec:
  selector:
    app: laa-landing-page-dev # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
