deployments/templates/unleash-service.yml
apiVersion: v1
kind: Service
metadata:
  name: unleash
  labels:
    app: unleash
spec:
  selector:
    app: unleash
  ports:
    - name: http
      port: 4242
      targetPort: 4242
