deployments/templates/manage-user-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manage-user-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: manage-user-ingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "sticky"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecAuditEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=laa-portal-stabilisation-tech"
      SecDebugLogLevel 1
spec:
  ingressClassName: ${INGRESS_CLASS_NAME}
  tls:
    - hosts:
      - ${BASE_URL_MANAGE_USER}
      secretName: "manage-srv-secret"
  rules:
    - host: ${BASE_URL_MANAGE_USER}
      http:
        paths:
          - path: /admin/users
            pathType: Prefix
            backend:
              service:
                name: laa-landing-page
                port:
                  number: 8080
