deployments/templates/unleash-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unleash-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: unleash-ingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-ciphers: "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305"
    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
spec:
  ingressClassName: ${INGRESS_CLASS_NAME}
  tls:
    - hosts:
        - ${UNLEASH_HOST}
      secretName: unleash-tls-secret
  rules:
    - host: ${UNLEASH_HOST}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: unleash
                port:
                  number: 4242
